--- a/android/src/main/res/layout/basket_item.xml
+++ b/android/src/main/res/layout/basket_item.xml
@@ -86,7 +86,7 @@
                 android:text="Item removed"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/textView1"
+                android:id="@+id/sizeView"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:layout_weight="1"/>
