--- a/android/src/main/res/layout/product_cell.xml
+++ b/android/src/main/res/layout/product_cell.xml
@@ -22,7 +22,7 @@
                 android:text="Men's Java t-shirt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView1"
+                android:id="@+id/sizeView"
                 android:paddingLeft="16dp"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
@@ -47,7 +47,7 @@
                 android:text="Free"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView2"
+                android:id="@+id/colorView"
                 android:paddingLeft="8dp"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
