--- a/android/src/main/res/layout/product_detail.xml
+++ b/android/src/main/res/layout/product_detail.xml
@@ -55,8 +55,7 @@
                 android:layout_marginBottom="8dp">
             <TableRow>
                 <TextView
-                        android:text="Size"
-                        android:id="@+id/textView1"
+                        android:id="@+id/sizeView"
                         android:layout_column="0"
                         android:layout_gravity="left|center_vertical"
                         android:gravity="center"
@@ -69,8 +68,7 @@
             </TableRow>
             <TableRow>
                 <TextView
-                        android:text="Color"
-                        android:id="@+id/textView2"
+                        android:id="@+id/colorView"
                         android:layout_column="0"
                         android:layout_gravity="left|center_vertical"
                         android:gravity="center"
@@ -84,7 +82,6 @@
         </TableLayout>
         <Button
                 style="@style/RoboButton"
-                android:text="Add to Basket"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
