--- a/android/src/main/res/layout/login_screen.xml
+++ b/android/src/main/res/layout/login_screen.xml
@@ -25,7 +25,8 @@
             android:id="@+id/password"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="4dp"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:imeOptions="actionSend"/>
     <Button
             style="@style/RoboButton"
             android:layout_width="match_parent"
