--- a/android/src/main/res/layout/shipping_details.xml
+++ b/android/src/main/res/layout/shipping_details.xml
@@ -24,51 +24,59 @@
                 android:paddingRight="16dp"
                 android:paddingLeft="16dp">
             <EditText
-                    android:inputType="textPersonName"
+                    android:inputType="textPersonName|textCapWords"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/firstName"/>
             <EditText
-                    android:inputType="textPersonName"
+                    android:inputType="textPersonName|textCapWords"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/lastName"/>
             <EditText
                     android:inputType="phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/phone"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <EditText
-                    android:inputType="textPostalAddress"
+                    android:inputType="textPostalAddress|textCapWords"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/streetAddress1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <EditText
-                    android:inputType="textPostalAddress"
+                    android:inputType="textPostalAddress|textCapWords"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/streetAddress2"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <EditText
-                    android:inputType="textPostalAddress"
+                    android:inputType="textPostalAddress|textCapWords"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/city"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <EditText
-                    android:inputType="text"
+                    android:inputType="text|textCapWords"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:id="@+id/postalCode"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <AutoCompleteTextView
+                    android:inputType="text|textCapWords"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/country"
@@ -76,10 +84,11 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <AutoCompleteTextView
+                    android:inputType="text|textCapWords"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/state"
-                    android:imeOptions="actionDone"
+                    android:imeOptions="actionSend"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"/>
             <Button
