--- a/android/src/main/res/layout/basket_item.xml
+++ b/android/src/main/res/layout/basket_item.xml
@@ -23,7 +23,7 @@
                 android:orientation="vertical"
                 android:minWidth="25px"
                 android:minHeight="25px"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout2"
                 android:layout_gravity="center"
@@ -41,7 +41,7 @@
                     android:id="@+id/linearLayout3">
                 <TextView
                         android:text="Men's Java t-shirt"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/productTitle"
                         android:layout_weight="1"
@@ -84,7 +84,7 @@
             android:visibility="invisible">
         <TextView
                 android:text="Item removed"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/sizeView"
                 android:textSize="20sp"
